--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "font-awesome": "^4.7.0",
     "moment": "^2.30.1",
     "ngx-bootstrap": "^11.0.2",
+    "ngx-spinner": "^16.0.2",
     "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
